# MPPI_Robotics_Project

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
.agents/rules/: architect.md  kernelspecialist.md  verifier.md
.agents/workflows/: mppi-dev.md
include/: cost_function.h  robot_types.h
scripts/: benchmark_quadrotor.py  visualize_trajectory.py
src/: dynamics.cu  main.cu
tests/: test_convergence.cu  test_dynamics.cu  test_mppi_integration.cu  test_obstacle_avoidance.cu
